# backgammon

./: Makefile  main.py  pyproject.toml
frontend/: Board.py  Gui.py  board.py  game_state.py  go_stone.py  gomoku_gui.py  gui.py  gui_.py
resource/: FrontendConfig.py  color.py  color_config.py  config.py  frontend_config.py
script/: send_email.py
